<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_posts">



    <fragment
        android:id="@+id/navigation_posts"
        android:name="ru.netology.mysocialnetwork.fragments.PostsFragment"
        android:label="@string/title_posts"
        tools:layout="@layout/card_post" />

    <fragment
        android:id="@+id/navigation_events"
        android:name="ru.netology.mysocialnetwork.fragments.EventsFragment"
        android:label="@string/title_events"
        tools:layout="@layout/card_event" />

    <fragment
        android:id="@+id/navigation_users"
        android:name="ru.netology.mysocialnetwork.fragments.UsersFragment"
        android:label="@string/title_users"
        tools:layout="@layout/card_user" />
</navigation>
