<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="?actionBarSize"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:inputType="textMultiLine"
                android:contentDescription="@string/description_post_text"
                android:padding="@dimen/common_spacing"
                />

            <FrameLayout
                android:id="@+id/photoContainer"
                android:visibility="gone"
                tools:visibility="visible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/photo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/description_image_post"
                    android:padding="@dimen/common_spacing"
                    android:adjustViewBounds="true"
                    app:layout_constraintBottom_toBottomOf="@id/divider"
                    tools:src="@drawable/image_dog" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/removeImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|bottom"
                    android:text="@string/remove_image" />
            </FrameLayout>
        </LinearLayout>
    </ScrollView>

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"

        app:layout_constraintBottom_toTopOf="@id/buttonPanel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/buttonPanel"
        android:layout_width="0dp"
        android:background="@color/teal_700"
        android:layout_height="?actionBarSize"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/buttonImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/size_zero"
            android:minHeight="@dimen/size_zero"
            android:padding="@dimen/common_spacing"
            android:contentDescription="@string/description_button_image"
            style="@style/Widget.AppTheme.MoreButton"
            android:src="@drawable/ic_add_a_photo_24" />
        <ImageButton
            android:id="@+id/buttonAttach"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/common_spacing"
            android:contentDescription="@string/description_button_attachment"
            android:minWidth="@dimen/size_zero"
            android:minHeight="@dimen/size_zero"
            style="@style/Widget.AppTheme.MoreButton"
            android:src="@drawable/ic_attach_file_24" />
        <ImageButton
            android:id="@+id/buttonPeople"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_button_people"
            android:minWidth="@dimen/size_zero"
            android:minHeight="@dimen/size_zero"

            android:padding="@dimen/common_spacing"
            style="@style/Widget.AppTheme.MoreButton"
            android:src="@drawable/ic_participants_24" />
        <ImageButton
            android:id="@+id/buttonLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppTheme.MoreButton"
            android:contentDescription="@string/description_button_location"
            android:padding="@dimen/common_spacing"
            android:minWidth="@dimen/size_zero"
            android:minHeight="@dimen/size_zero"

            android:src="@drawable/ic_location_on_24" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
